# recurrator

./: .gitignore  CLAUDE.md  DESIGN.md  generate_test_notes.py  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml
src-tauri/src/: capture.rs  commands.rs  lib.rs  main.rs  notes.rs  search.rs
src/lib/: Preview.svelte  api.ts
